fix overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -79,6 +79,7 @@ body {
     margin: 0;
     height: 100%;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 html {
